update home(banner, comment)

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -25,6 +25,7 @@
 @import "layout/_login_light_box";
 @import "layout/debug";
 @import "layout/QRcodeLightBox";
+@import "layout/CommentLightBox";
 
 //page
 @import "page/animal";
