--- a/src/assets/scss/page/park.scss
+++ b/src/assets/scss/page/park.scss
@@ -613,6 +613,9 @@ $time:10s;
                         z-index: 11;
                         bottom: 7.42%;
                         color: $mainTextColor;
+                        @media (max-width:768px)  {
+                            bottom:3%
+                        }
                         @media (max-width:600px)  {
                             bottom:4%
                         }
@@ -911,5 +914,11 @@ $time:10s;
             }
         }
 
+    }
+
+    .ph_Sidebar{
+        @media (min-width:769px) {
+            display: none;
+        }
     }
 }
