--- a/src/assets/scss/page/home.scss
+++ b/src/assets/scss/page/home.scss
@@ -51,18 +51,29 @@
         }
         
         &_carousel{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            position: relative;
-            max-width: 100%;
-            overflow: hidden;
+            // display: flex;
+            // justify-content: center;
+            // align-items: center;
+            // height: 100vh;
+            // position: relative;
+            // max-width: 100%;
+            // overflow: hidden;
+            
             &_img {
-                img{
-                    height: auto;
-                    width: 100%;
-                }
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                height: 100vh;
+                position: relative;
+                max-width: 100%;
+                overflow: hidden;
+                background-size: cover;
+                background-position: center center;
+                // background-repeat: no-repeat;
+                // img{
+                //     height: auto;
+                //     width: 100%;
+                // }
             }
 
             &_controls {
@@ -72,6 +83,7 @@
                 display: flex;
                 justify-content: space-between;
                 width: 100%;
+
                 button {
                     background-color: #ffffff00;
                     color: #fff;
@@ -614,50 +626,100 @@
     .home_animalfoot{
         position: relative;
         top: 8vw;
+        // animation: name duration timing-function delay iteration-count direction fill-mode;
+
+        img{
+            transform: scale(0);
+            animation: 8000ms foot infinite;
+        }
 
         .foot1{
             position: absolute;
+            width: 8vw;
+            // opacity: 0;
+            // animation: foot 9s .2s 5 normal forwards;
         }
         .foot2{
             position: absolute;
+            // opacity: 0;
             top: -4vw;
             left: 4vw;
+            animation-delay: 200ms;
+            // animation: foot 8.7s .8s 5 normal forwards;
         }
         .foot3{
             position: absolute;
+            // opacity: 0;
             top: -7vw;
             left: 10vw;
+            animation-delay: 400ms;
+            // animation: foot 8.4s 1.1s 5 normal forwards;
         }
         .foot4{
             position: absolute;
+            // opacity: 0;
             top: -8vw;
             left: 17vw;
+            animation-delay: 600ms;
+            // animation: foot 8.1s 1.4s 5 normal forwards;
         }
         .foot5{
             position: absolute;
+            // opacity: 0;
             top: -7.5vw;
             left: 24.5vw;
+            animation-delay: 800ms;
+            // animation: foot 7.8s 1.7s 5 normal forwards;
         }
         .foot6{
             position: absolute;
+            // opacity: 0;
             top: -7vw;
             left: 31vw;
+            animation-delay: 1000ms;
+            // animation: foot 7.5s 2s 5 normal forwards;
         }
         .foot7{
             position: absolute;
+            // opacity: 0;
             top: -7vw;
             left: 36.5vw;
+            animation-delay: 1200ms;
+            // animation: foot 7.2s 2.3s 5 normal forwards;
         }
         .foot8{
             position: absolute;
+            // opacity: 0;
             top: -7.5vw;
             left: 42.5vw;
+            animation-delay: 1400ms;
+            // animation: foot 6.9s 2.6s 5 normal forwards;
         }
         .foot9{
             position: absolute;
+            // opacity: 0;
             top: -9vw;
             left: 48vw;
+            animation-delay: 1600ms;
+            // animation: foot 6.6s 2.9s 5 normal forwards;
         }
+
+    
+        @keyframes foot{
+            0%{
+                transform: scale(1);
+            }
+            50%{
+                transform: scale(1);
+            }
+            50.5%{
+                transform: scale(0);
+            }
+            100%{
+                opacity: 1;
+            }
+        }
+
     }
 
     //天氣 最新消息
@@ -773,7 +835,7 @@
                 left: 3vw;
                 width: 10vw;
                 vertical-align: bottom;
-                transform:scaleX(-1);
+                // transform:scaleX(-1);
             }
             .grass_1 img{
                 position: absolute;
@@ -1239,6 +1301,7 @@
                         vertical-align: bottom;
                         width: 100%; 
                     }
+
                     &_content{
                         color: $mainTextColor;
                         padding-top: 0.6vw;
