--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -1,3 +1,12 @@
+@keyframes menuSwitchanimation{
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 header {
   z-index: 999;
   position: fixed;
@@ -6,8 +15,20 @@ header {
   height: 40px;
   box-sizing: border-box;
   background-color: $bgColorLightgray;
-
+  @media (max-width:768px) {
+    height: 60px;
+  }
+  @media (max-width:480px) {
+    height: 50px;
+  }
+  @media (max-width:420px) {
+    height: 45px;
+  }
+  @media (max-width:375px) {
+    height: 40px;
+  }
   nav {
+    display: none;
     background-color: #a67751;
     border-bottom: 3px #d0ae93 solid;
     width: 100%;
@@ -17,7 +38,14 @@ header {
     display: flex;
     justify-content: center;
     align-items: flex-end;
-
+    @media (max-width:768px) {
+      top: 70%;
+      height: 100%;
+    }
+    @media (max-width:375px) {
+      top: 60%;
+      height: 100%;
+    }
     &::before {
       content: "";
       position: absolute;
@@ -38,6 +66,18 @@ header {
       left: 0;
       border-bottom: 40px solid #ff730000;
       border-left: 50px solid $bgColorLightgray;
+      @media (max-width:768px) {
+        border-bottom: 60px solid #ff730000;
+      }
+      @media (max-width:480px) {
+        border-bottom: 50px solid #ff730000;
+      }
+      @media (max-width:420px) {
+        border-bottom: 45px solid #ff730000;;
+      }
+      @media (max-width:375px) {
+        border-bottom: 40px solid #ff730000;
+      }
     }
 
     .arrowright{
@@ -46,6 +86,18 @@ header {
       right: 0;
       border-bottom: 40px solid #ff730000;
       border-right: 50px solid $bgColorLightgray;
+      @media (max-width:768px) {
+        border-bottom: 60px solid #ff730000;
+      }
+      @media (max-width:480px) {
+        border-bottom: 50px solid #ff730000;
+      }
+      @media (max-width:420px) {
+        border-bottom: 45px solid #ff730000;;
+      }
+      @media (max-width:375px) {
+        border-bottom: 40px solid #ff730000;
+      }
     }
 
     .arrowtopleft{
@@ -85,6 +137,9 @@ header {
       position: relative;
       // padding-bottom: 7px;
       // margin-left: 6.5%;
+      @media (max-width:768px) {
+        height: 100%;
+      }
     }
 
     a{
@@ -117,11 +172,26 @@ header {
       background-size: contain;
       background-repeat: no-repeat;
       background-position: center center;
-
       img{
           width: 105px;
           // height: 48px;
           vertical-align: bottom;
+      }
+      @media (max-width:768px) {
+        width: 41.2%;
+        height: 166%;
+        a{
+          display: flex;
+          justify-content: center;
+          width: 100%;
+        }
+        img{
+          width: 67.4%;
+        }
+      }
+      @media (max-width:480px) {
+        width: 50%;
+        height: 166%;
       }
     }
 
@@ -315,9 +385,59 @@ header {
         top: 0px;
       }
     }
-      
+    
+    .header_ph_hb{
+      position: absolute;
+      right: 15%;
+      top:0%;
+      z-index: 1100;
+      width: 7.8125%;
+      height: 7.0175%;
+      .header_ph_hb_style{
+        margin: 20%;
+        display: block;
+        width: 100%;
+        height: 80%;
+        background-color: #fff;
+      }
+    }
+
   }
-
-
-  
+  .header_ph_dis_no{
+    @media (max-width:768px) {
+      display: none;
+    }
+  }
+  .header_pc_dis_no{
+    @media (min-width:769px) {
+      display: none;
+    }
+  }
+}
+.header_ph_hb_menu{
+  position: absolute;
+  z-index: 998;
+  width: 100vw;
+  height: 100vh;
+  background-color: #ffffff;
+  .header_router_links{
+    position: absolute;
+    bottom: 20%;
+    left: 40%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+    a{
+      color: $mainTextColor;
+      text-decoration: none;
+    }
+    @media (max-width:480px) {
+      bottom: 28%;
+    }
+    @media (max-width:375px) {
+      bottom: 30%;
+    }
+  }
 }
