--- a/src/assets/scss/page/news.scss
+++ b/src/assets/scss/page/news.scss
@@ -31,6 +31,7 @@
     }
     .news_pc_filter{
         position: sticky;
+        z-index: 5;
         top: 10vh;
         height: 20vh;
         margin-right: 2.7vw;       
@@ -73,6 +74,11 @@ ul.news_pc_filter li{
 .news_content{
     position: relative;
     z-index: 3;
+    @media screen and (max-width: 1100px) {
+        padding-top: 3vw;
+        margin-right: 0;
+        width: 75%;
+    }
     @media screen and (max-width: 768px) {
         padding-top: 3vw;
         width: 100%;
@@ -107,14 +113,24 @@ ul.news_pc_filter li{
             .newsFrame{
                 display: inline-block;
                 p{
-                    padding-top: 0.65vw;
+                    padding-top: 0.5vw;
+                    @media screen and (max-width: 1280px) {
+                        padding-top: 0.75vw;
+                    }
+                    @media screen and (max-width: 768px) {
+                        padding-top: 0.8vw;
+                    }
+                    @media screen and (max-width: 450px) {
+                        padding-top: 1.8vw;
+                    }
                 }
             }
         }
     }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 768px)
+ {
     .news_info{
         display: flex;
         flex-direction: column;
@@ -163,11 +179,24 @@ ul.news_pc_filter li{
             &hover+ .news_page_num{
                 background-color: aqua;
             }
+            @media screen and (max-width: 768px) {
+                top: 42%;
+                left: 48%;
+            }
+        }
+        @media screen and (max-width: 414px) {
+            a{
+                top: 39%;
+                left: 42%;
+            }
+            img{
+                width: 85%;
+            }
         }
         .news_page_num{
-            position: absolute;
-            z-index: 0;
-            // padding-top: 54px;
+            position: absolute; 
+            z-index: 0;  
+            // padding-top: 54px; 
         }
     }
 }
@@ -207,7 +236,17 @@ ul.news_pc_filter li{
         .newsFrame{
             display: inline-block;
             p{
-                padding-top: 0.6vw;
+                padding-top: 0.75vw;
+                @media screen and (max-width: 1280px) {
+                    padding-top: 0.75vw;
+                }
+                @media screen and (max-width: 768px) {
+                    padding-top: 0.8vw;
+                }
+                @media screen and (max-width: 370px) {
+                    padding-top: 10vw;
+                }
+                
             }
         }
         @media screen and (max-width: 768px) {
@@ -221,6 +260,8 @@ ul.news_pc_filter li{
     }
 }
 .news_detail_content{
+    position: relative;
+    z-index: 2;
     padding: 0 10vw;
     padding-bottom: 9vw;
     .news_detail_pic{
@@ -284,13 +325,59 @@ ul.news_pc_filter li{
     .cloud_2{
         top: 8%; 
         left: -10%;
-        width: 20%;      
+        width: 20%;   
+        animation: newsCloud2 20s infinite linear;    
     }
+    @keyframes newsCloud2{
+        20%{
+            top: 8%; 
+            left: -9%;
+        }
+        40%{
+            top: 7%; 
+            left: -9%;
+        }
+        60%{
+            top: 6%; 
+            left: -8%;
+        }
+        80%{
+            top: 7%; 
+            left: -9%;
+        }
+        100%{
+            top: 8%; 
+            left: -10%;
+        }
+    }   
     .cloud_4{   
         top: 52%;      
         right: 0%;  
         width: 20%;   
+        animation: newsCloud4 20s infinite linear;  
     }
+    @keyframes newsCloud4{
+        20%{
+            top: 51%;      
+            right: 1%; 
+        }
+        40%{
+            top: 52%;      
+            right: 2%; 
+        }
+        60%{
+            top: 53%;      
+            right: 2%; 
+        }
+        80%{
+            top: 53%;      
+            right: 1%; 
+        }
+        100%{
+            top: 52%;      
+            right: 0%; 
+        }
+    }   
 
     .alpaca{
         position: absolute;
@@ -298,11 +385,11 @@ ul.news_pc_filter li{
         bottom: 0;
         left: 2%;
         width: 5%;  
-        z-index: 10;
+        z-index: 2;
     }
     .news_bg_palnt{
         position: absolute;
-        z-index: 3;
+        z-index: 2;
         bottom: 0;        
     }
     .tree_4{
@@ -337,17 +424,87 @@ ul.news_pc_filter li{
     .cloud_2{
         top: 30%; 
         left: 9%;
-        width: 20%;      
+        width: 20%; 
+        animation: newsdetailCloud2 20s infinite linear;       
     }
+    @keyframes newsdetailCloud2 {
+        20%{
+            top: 29%; 
+            left: 8%;
+        }
+        45%{
+            top: 30%; 
+            left: 7%;
+        }
+        60%{
+            top: 31%; 
+            left: 8%; 
+        }
+        85%{
+            top: 31%; 
+            left: 7%; 
+        }
+        100%{
+            top: 30%; 
+            left: 9%; 
+        }
+    }   
+    
     .cloud_4{   
         top: 52%;      
-        right: -10%;  
+        right: 0%;  
         width: 20%;   
+        animation: newsdetailCloud4 20s infinite linear;     
     }
+    @keyframes newsdetailCloud4 {
+        20%{
+            top: 51%;      
+            right: 1%;  
+        }
+        45%{
+            top: 50%;      
+            right: 2%;  
+        }
+        60%{
+            top: 51%;      
+            right: 0%;  
+        }
+        85%{
+            top: 50%;      
+            right: 1%;  
+        }
+        100%{
+            top: 52%;      
+            right: 0%;  
+        }
+    }   
     .cloud_4_2{   
         bottom: 17%;      
-        left: -10%;
+        left: 0%;
         width: 20%;   
+        animation: newsdetailCloud4_2 20s infinite linear;     
     }
+    @keyframes newsdetailCloud4_2 {
+        20%{
+            bottom: 18%;      
+            left: -1%; 
+        }
+        45%{
+            bottom: 16%;      
+            left: -2%;  
+        }
+        60%{
+            bottom: 17%;      
+            left: 0%;  
+        }
+        85%{
+            bottom: 18%;      
+            left: 1%;  
+        }
+        100%{
+            bottom: 17%;      
+            left: 0%;  
+        }
+    }   
 }
 
