--- a/src/assets/scss/components/_btn.scss
+++ b/src/assets/scss/components/_btn.scss
@@ -29,19 +29,11 @@ $Sidebar_icon_rigth: 70px;
   left: -14%;
   transition: 0.3s;
   @media (max-width:768px) {
-    width: 300px;
-    height: 80px;
-    top: 50%;
-    left: -29.5%;
-  }
-  @media (max-width:480px) {
-    width: 163px;
-    height: 80px;
-    top: 25%;
-    left: -29.5%;
+    top: 5%;
+    left: -26%;
   }
   &:hover {
-    @media (min-width:1280px) {
+    @media (min-width:1279px) {
       transition: 0.3s;
       left: 0;
     }
@@ -65,13 +57,8 @@ $Sidebar_icon_rigth: 70px;
     }
     @media (max-width: 768px) {
       width: 12vw;
-      top: -22vh;
-      right: 13vw;
-    }
-    @media (max-width: 480px) {
-      width: 13vw;
-      top: -9vh;
-      right: 14vw;
+      top: -23%;
+      right: 35%;
     }
   }
   .Sidebar_filter_btns {
@@ -90,12 +77,6 @@ $Sidebar_icon_rigth: 70px;
       @media (max-width:768px) {
         width: 200px;
         height: 12vh;
-        gap: 10px;
-      }
-      @media (max-width:480px) {
-        justify-content: start;
-        width: 110px;
-        height: 6vh;
         gap: 10px;
       }
       &:hover {
@@ -137,7 +118,7 @@ $Sidebar_icon_rigth: 70px;
       height: 3.7vh;
     }
     @media (max-width:768px) {
-      width: 300px;
+      width: 100px;
       height: 12vh;
       img {
         width: 6vw;
