--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -1,12 +1,3 @@
-@keyframes menuSwitchanimation{
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
 header {
   z-index: 999;
   position: fixed;
@@ -393,12 +384,36 @@ header {
       z-index: 1100;
       width: 7.8125%;
       height: 7.0175%;
+      @media (max-width:550px) {
+        top: 7%;
+      }
+      @media (max-width:430px) {
+        top: 10%;
+      }
+      @media (max-width:330px) {
+        top: 10%;
+        right: 20%;
+      }
       .header_ph_hb_style{
         margin: 20%;
         display: block;
         width: 100%;
         height: 80%;
         background-color: #fff;
+        transition: all 0.3s ease
+      }
+      .header_hb_span1.active {
+        position: absolute;
+        top: 400%;
+        transform: rotate(-45deg);
+      }
+      .header_hb_span2.active {
+        opacity: 0;
+      }
+      .header_hb_span3.active {
+        position: absolute;
+        top: 400%;
+        transform: rotate(45deg);
       }
     }
 
@@ -415,7 +430,7 @@ header {
   }
 }
 .header_ph_hb_menu{
-  position: absolute;
+  position: fixed;
   z-index: 998;
   width: 100vw;
   height: 100vh;
@@ -423,7 +438,7 @@ header {
   .header_router_links{
     position: absolute;
     bottom: 20%;
-    left: 40%;
+    left: 45%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -433,7 +448,20 @@ header {
       color: $mainTextColor;
       text-decoration: none;
     }
+    @media (max-width:600px) {
+      left: 45%;
+    }
+    @media (max-width:600px) {
+      left: 43%;
+    }
     @media (max-width:480px) {
+      bottom: 28%;
+    }
+    @media (max-width:430px) {
+      bottom: 30%;
+      left: 41%;
+    }
+    @media (max-width:414px) {
       bottom: 28%;
     }
     @media (max-width:375px) {
