--- a/src/assets/scss/page/vote.scss
+++ b/src/assets/scss/page/vote.scss
@@ -11,11 +11,11 @@
   .banner {
     width: 100%;
     height: 100vh;
-    background-image: url("/src/assets/images/vote/tree.svg");
+    // background-image: url("/src/assets/images/vote/tree.svg");
 
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: bottom center;
+    // background-size: contain;
+    // background-repeat: no-repeat;
+    // background-position: bottom center;
 
     .title {
       color: $primaryColorGreen;
@@ -30,6 +30,16 @@
       left: 20%;
       transform: scaleX(-1);
       width: 8vw;
+      z-index: 10;
+    }
+    .tree_bg {
+      position: absolute;
+      bottom: 0px;
+      left: 0;
+      display: block; /* 確保圖片顯示為塊級元素 */
+      width: 100%; /* 讓圖片填滿父級容器的寬度 */
+      height: auto; /* 讓高度自動調整以保持圖片比例 */
+      max-width: 100%; /* 避免圖片超出其原始大小 */
       z-index: 10;
     }
 
@@ -171,9 +181,21 @@
     height: 90vh;
 
     .banner {
-      width: 100%;
-      height: auto;
+      // width: 100%;
+      // height: auto;
       // background-image: url("/src/assets/images/vote/pc-tree.svg");
+      // z-index: 5;
+      .title {
+        padding: 15% 0;
+      }
+      .sheep {
+        left: 20%;
+
+        width: 19vw;
+      }
+      .tree_bg {
+        content: url("@/assets/images/vote/pc-tree.svg");
+      }
       .podium_no {
         .vote_img {
           width: 15vw;
@@ -190,7 +212,7 @@
 
         .score {
           position: absolute;
-          top: 40vw;
+          top: 35vw;
           z-index: 10;
         }
 
@@ -217,10 +239,6 @@
             width: 30vw;
           }
         }
-      }
-
-      .title {
-        padding: 5% 0;
       }
     }
   }
@@ -390,6 +408,22 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
+      }
+    }
+    .cloud_6 {
+      top: 3%;
+      left: 20%;
+
+      img {
+        width: 14vw;
+      }
+    }
+
+    .cloud_2 {
+      top: 5%;
+      right: 5%;
+      img {
+        max-width: 16vw;
       }
     }
   }
@@ -642,7 +676,10 @@
   .vote_overview_all {
     .vote_overview_content {
       max-width: 70%;
-
+      .elephant1 img {
+        width: 20vw;
+        right: 13%;
+      }
       .vote_button {
         flex-direction: column;
 
