--- a/css/frontPage.css
+++ b/css/frontPage.css
@@ -76,10 +76,10 @@ body main .dirArea .front {
   font-weight: 700;
   line-height: 150%;
   font-family: "Montserrat", "Noto Sans TC";
-  font-size: clamp(1.5rem, 2.5vw, 2.3rem);
+  font-size: 28px;
   position: absolute;
-  top: 112px;
-  right: 70px;
+  top: 118px;
+  right: 72px;
   color: #fff;
   text-decoration: none;
 }
@@ -90,10 +90,10 @@ body main .dirArea .back {
   font-weight: 700;
   line-height: 150%;
   font-family: "Montserrat", "Noto Sans TC";
-  font-size: clamp(1.5rem, 2.5vw, 2.3rem);
+  font-size: 28px;
   position: absolute;
   bottom: 138px;
-  right: 70px;
+  right: 72px;
   color: #fff;
   text-decoration: none;
 }
