--- a/src/assets/scss/page/member.scss
+++ b/src/assets/scss/page/member.scss
@@ -30,7 +30,7 @@
   background-color: rgba(0, 0, 0, 0.3);
   z-index: 1000;
   @media (width <= 768px) {
-    align-items: flex-start;
+    // align-items: flex-start;
   }
 }
 .memPage {
